--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,10 @@ dependencies {
     implementation deps.rx.rxandroid
     implementation deps.rx.rxkotlin2
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0"
+    implementation deps.coroutines.core
+    implementation deps.coroutines.android
+
+    implementation deps.jsoup
 
     implementation deps.easydeviceinfo
     implementation deps.licensedialog
@@ -97,6 +99,11 @@ dependencies {
     implementation deps.rssparser
 
 
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     testImplementation deps.atsl.junit
     androidTestImplementation deps.atsl.runner
     androidTestImplementation deps.atsl.espressocore
