--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,12 @@ dependencies {
   implementation 'com.google.android.material:material:1.0.0'
   annotationProcessor deps.glide.compiler
 
+  implementation deps.retrofit.runtime
+  implementation deps.retrofit.gson
+  implementation deps.retrofit.rxjava2
+  implementation deps.okhttp.runtime
+  implementation deps.okhttp.logging_interceptor
+
   implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
   implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
