--- a/versions.gradle
+++ b/versions.gradle
@@ -18,10 +18,10 @@ versions.rxjava2 = "2.2.6"
 versions.rxkotlin2 = '2.3.0'
 versions.rxandroid = "2.1.0"
 versions.easyprefs = '1.9.0'
-versions.material = '1.1.0-alpha03'
+versions.material = '1.1.0-alpha06'
 versions.lottie = '2.8.0'
-versions.viewpager2 = '1.0.0-alpha01'
-versions.paging = '2.0.0-rc01'
+versions.viewpager2 = '1.0.0-alpha04'
+versions.paging = '2.1.0'
 versions.easydeviceinfo = '2.4.1'
 versions.android_gradle = '3.4.0'
 versions.kotlin = '1.3.30'
