--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,8 @@ dependencies {
 
   implementation deps.glide.runtime
   implementation 'com.google.android.material:material:1.0.0'
+  implementation 'androidx.appcompat:appcompat:1.0.2'
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
   annotationProcessor deps.glide.compiler
 
   implementation deps.retrofit.runtime
@@ -113,9 +115,9 @@ dependencies {
   implementation deps.okhttp.runtime
   implementation deps.okhttp.logging_interceptor
 
-//  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-//  implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-//  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  //  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+  //  implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+  //  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   testImplementation deps.atsl.junit
   androidTestImplementation deps.atsl.runner
   androidTestImplementation deps.atsl.espressocore
