--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
       android:usesCleartextTraffic="true"
       tools:ignore="AllowBackup,GoogleAppIndexingWarning,RtlEnabled,UnusedAttribute">
 
+    <activity
+        android:name=".view.ui.country.CountryActivity"
+        android:screenOrientation="portrait"/>
+
     <meta-data
         android:name="com.google.android.gms.ads.AD_MANAGER_APP"
         android:value="true"/>
@@ -36,12 +40,10 @@
         android:name=".view.ui.search.SearchActivity"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme.NoActionBar"/>
-
     <activity
         android:name=".view.ui.web.WebActivity"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme.NoActionBar"/>
-
   </application>
 
 </manifest>
