--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,7 @@ dependencies {
   testImplementation deps.atsl.junit
   androidTestImplementation deps.atsl.runner
   androidTestImplementation deps.atsl.espressocore
+  implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.31"
 }
 
 apply plugin: 'com.google.gms.google-services'
