--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,15 @@
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="true"
       tools:ignore="AllowBackup,GoogleAppIndexingWarning,RtlEnabled,UnusedAttribute">
-
+    <activity
+        android:name=".view.ui.splash.SplashActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.Launcher">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
     <activity
         android:name=".view.ui.country.CountryActivity"
         android:screenOrientation="portrait"
@@ -28,15 +36,8 @@
 
     <activity
         android:name=".view.ui.main.MainActivity"
-        android:label="@string/app_name"
         android:screenOrientation="portrait"
-        android:theme="@style/AppTheme.NoActionBar">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
+        android:theme="@style/AppTheme.NoActionBar"/>
     <activity
         android:name=".view.ui.search.SearchActivity"
         android:screenOrientation="portrait"
