--- a/scripts/dependencies.gradle
+++ b/scripts/dependencies.gradle
@@ -1,43 +1,43 @@
 ext.deps = [:]
 def versions = [:]
-versions.room = "2.0.0"
+versions.room = "2.2.4"
 versions.junit = '4.12'
 versions.runner = '1.0.2'
 versions.espressocore = '3.1.0'
-versions.appcompat = '1.0.2'
+versions.appcompat = '1.1.0'
 versions.lifecycle = "2.0.0"
 versions.support = "28.0.0"
-versions.dagger = "2.17"
+versions.dagger = "2.26"
 versions.espresso = "3.1.0"
-versions.retrofit = "2.5.0"
+versions.retrofit = "2.7.2"
 versions.okhttp = "3.12.0"
 versions.constraintlayout = "1.1.3"
 versions.glide = "4.9.0"
 versions.timber = "4.7.1"
-versions.rxjava2 = "2.2.6"
-versions.rxkotlin2 = '2.3.0'
-versions.rxandroid = "2.1.0"
+versions.rxjava2 = "2.2.18"
+versions.rxkotlin2 = '2.4.0'
+versions.rxandroid = "2.1.1"
 versions.easyprefs = '1.9.0'
-versions.material = '1.1.0-alpha06'
-versions.lottie = '3.0.2'
-versions.viewpager2 = '1.0.0-alpha04'
+versions.material = '1.0.0'
+versions.lottie = '3.4.0'
+versions.viewpager2 = '1.0.0'
 versions.paging = '2.1.0'
 versions.easydeviceinfo = '2.4.1'
 versions.android_gradle = '3.6.1'
 versions.kotlin = '1.3.70'
-versions.core_ktx = '1.0.1'
-versions.lifecycle_viewmodel_ktx = '2.0.0'
-versions.lifecycle_extensions = '2.0.0'
-versions.annotation = '1.0.2'
+versions.core_ktx = '1.2.0'
+versions.lifecycle_viewmodel_ktx = '2.2.0'
+versions.lifecycle_extensions = '2.2.0'
+versions.annotation = '1.1.0'
 versions.legacy_preference_v14 = '1.0.0'
 versions.licensedialog = '2.0.0'
 versions.easyprefs = '1.9.0'
-versions.firebase_ads = '17.2.1'
-versions.google_service = '4.2.0'
-versions.rssparser = '2.0.3'
+versions.firebase_ads = '19.0.0'
+versions.google_service = '4.3.3'
+versions.rssparser = '2.1.2'
 versions.jsoup = '1.11.3'
-versions.coroutines = '1.2.0'
-versions.fragment = '1.0.0'
+versions.coroutines = '1.3.4'
+versions.fragment = '1.2.2'
 versions.koltin_reflect = '1.3.70'
 def deps = [:]
 
