--- a/scripts/dependencies.gradle
+++ b/scripts/dependencies.gradle
@@ -38,6 +38,7 @@ versions.rssparser = '2.1.2'
 versions.jsoup = '1.11.3'
 versions.coroutines = '1.3.4'
 versions.fragment = '1.2.2'
+versions.activity = '1.1.0'
 versions.koltin_reflect = '1.3.70'
 def deps = [:]
 
@@ -57,6 +58,9 @@ androidx.lifecycle_extensions =
 androidx.legacy_preference_v14 =
     "androidx.legacy:legacy-preference-v14:$versions.legacy_preference_v14"
 androidx.fragment = "androidx.fragment:fragment:$versions.fragment"
+androidx.fragment_ktx = "androidx.fragment:fragment-ktx:$versions.fragment"
+androidx.activity = "androidx.activity:activity:$versions.activity"
+androidx.activity_ktx = "androidx.activity:activity-ktx:$versions.activity"
 deps.androidx = androidx
 
 def jetbrains = [:]
