--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,13 +70,34 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    flavorDimensions "mode"
+
+    productFlavors {
+        dev {
+
+        }
+
+        pro {
+
+        }
+    }
+
     sourceSets {
         main {
-            res {
-                srcDirs 'src/main/res'
-            }
             java {
                 srcDirs 'src/main/java'
+            }
+        }
+
+        dev {
+            java {
+                srcDirs 'src/dev/java'
+            }
+        }
+
+        pro {
+            java {
+                srcDirs 'src/pro/java'
             }
         }
     }
