--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,9 +94,21 @@ dependencies {
 
     implementation deps.coroutines.values()
 
-    implementation deps.hilt.android
-    kapt deps.hilt.android_compiler
+    implementation "com.google.dagger:dagger:2.28.1"
+    implementation "com.google.dagger:hilt-android:2.28.1-alpha"
+    implementation "com.google.dagger:hilt-android-testing:2.28.1-alpha"
+    implementation "androidx.hilt:hilt-common:1.0.0-alpha01"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01"
+    kapt "com.google.dagger:dagger-compiler:2.28.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.28.1-alpha"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha01"
 
+/*
+    daggerVersion           : '2.28',
+    daggerHiltAndroidVersion: '2.28-alpha',
+    daggerHiltVersion       : '1.0.0-alpha01',
+
+ */
     implementation deps.jsoup
     implementation deps.easydeviceinfo
     implementation deps.licensedialog
