--- a/scripts/dependencies.gradle
+++ b/scripts/dependencies.gradle
@@ -23,7 +23,7 @@ versions.lottie = '3.4.0'
 versions.viewpager2 = '1.0.0'
 versions.paging = '2.1.0'
 versions.easydeviceinfo = '2.4.1'
-versions.android_gradle = '4.0.0'
+versions.android_gradle = '4.2.0-alpha15'
 versions.kotlin = '1.3.70'
 versions.core_ktx = '1.2.0'
 versions.lifecycle_viewmodel_ktx = '2.2.0'
@@ -148,13 +148,13 @@ class_path.hilt = "com.google.dagger:hilt-android-gradle-plugin:2.28.1-alpha"
 ext.class_path = class_path
 
 def config = [:]
-config.compile_sdk = 28
+config.compile_sdk = 30
 config.app_id = 'io.github.ovso.globaltrend'
 config.min_sdk = 21
-config.target_sdk = 28
+config.target_sdk = 30
 config.version_major = 1
 config.version_minor = 1
-config.version_patch = 0
+config.version_patch = 1
 
 ext.config = config
 
