--- a/scripts/dependencies.gradle
+++ b/scripts/dependencies.gradle
@@ -23,7 +23,7 @@ versions.lottie = '3.4.0'
 versions.viewpager2 = '1.0.0'
 versions.paging = '2.1.0'
 versions.easydeviceinfo = '2.4.1'
-versions.android_gradle = '4.2.0-alpha15'
+versions.android_gradle = '4.2.0-rc01'
 versions.kotlin = '1.3.70'
 versions.core_ktx = '1.2.0'
 versions.lifecycle_viewmodel_ktx = '2.2.0'
