--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,7 @@ android {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation deps.kotlin
     implementation deps.androidx.values()
@@ -101,27 +101,26 @@ dependencies {
 
     implementation deps.coroutines.values()
 
-    implementation "com.google.dagger:dagger:2.28.3"
-    implementation "com.google.dagger:hilt-android:2.28.1-alpha"
-    implementation "com.google.dagger:hilt-android-testing:2.28.1-alpha"
-    implementation "androidx.hilt:hilt-common:1.0.0-alpha02"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
-    kapt "com.google.dagger:dagger-compiler:2.28.1"
-    kapt "com.google.dagger:hilt-android-compiler:2.28.1-alpha"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
+    implementation "com.google.dagger:dagger:2.33"
+    implementation "com.google.dagger:hilt-android:2.33-beta"
+    implementation "com.google.dagger:hilt-android-testing:2.33-beta"
+    implementation "androidx.hilt:hilt-common:1.0.0-beta01"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
+    kapt "com.google.dagger:dagger-compiler:2.33"
+    kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
 
-/*
-    daggerVersion           : '2.28',
-    daggerHiltAndroidVersion: '2.28-alpha',
-    daggerHiltVersion       : '1.0.0-alpha01',
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.preference:preference-ktx:1.1.1"
+    implementation group: 'com.prof.rssparser', name: 'rssparser', version: '3.1.3'
 
- */
     implementation deps.jsoup
     implementation deps.easydeviceinfo
     implementation deps.licensedialog
     implementation deps.timber
-    implementation deps.easyprefs
-    implementation deps.rssparser
     implementation deps.lottie
 
     implementation deps.glide.runtime
