--- a/scripts/dependencies.gradle
+++ b/scripts/dependencies.gradle
@@ -24,7 +24,7 @@ versions.viewpager2 = '1.0.0'
 versions.paging = '2.1.0'
 versions.easydeviceinfo = '2.4.1'
 versions.android_gradle = '4.2.0-rc01'
-versions.kotlin = '1.3.70'
+versions.kotlin = '1.3.72'
 versions.core_ktx = '1.2.0'
 versions.lifecycle_viewmodel_ktx = '2.2.0'
 versions.lifecycle_extensions = '2.2.0'
@@ -39,7 +39,6 @@ versions.jsoup = '1.11.3'
 versions.coroutines = '1.3.4'
 versions.fragment = '1.2.2'
 versions.activity = '1.1.0'
-versions.koltin_reflect = '1.3.70'
 def deps = [:]
 
 def androidx = [:]
@@ -64,7 +63,7 @@ androidx.activity_ktx = "androidx.activity:activity-ktx:$versions.activity"
 deps.androidx = androidx
 
 def jetbrains = [:]
-jetbrains.kotlin_reflect = "org.jetbrains.kotlin:kotlin-reflect:$versions.koltin_reflect"
+jetbrains.kotlin_reflect = "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin"
 deps.jetbrains = jetbrains
 
 def firebase = [:]
@@ -143,7 +142,7 @@ def class_path = [:]
 class_path.android_gradle = "com.android.tools.build:gradle:$versions.android_gradle"
 class_path.kotlin_plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
 class_path.google_service = "com.google.gms:google-services:$versions.google_service"
-class_path.hilt = "com.google.dagger:hilt-android-gradle-plugin:2.28.1-alpha"
+class_path.hilt = "com.google.dagger:hilt-android-gradle-plugin:2.35.1"
 
 ext.class_path = class_path
 
@@ -160,8 +159,8 @@ ext.config = config
 
 static def addRepos(RepositoryHandler handler) {
     handler.google()
-    handler.jcenter()
     handler.mavenCentral()
+    handler.jcenter()
     handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     handler.maven { url 'https://maven.fabric.io/public' }
     handler.maven { url "https://jitpack.io" }
