--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,8 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.1.1"
     implementation group: 'com.prof.rssparser', name: 'rssparser', version: '3.1.3'
 
+    implementation 'com.orhanobut:logger:2.2.0'
+
     implementation deps.jsoup
     implementation deps.easydeviceinfo
     implementation deps.licensedialog
