--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,9 @@ String getAdsUnitId(String key, String buildType) {
     File file = rootProject.file("properties/config_${buildType}.properties")
     Properties properties = new Properties()
     properties.load(new FileInputStream(file))
-    return properties[key].toString()
+    String unitId = properties[key].toString()
+    println("${buildType} unitId: ${unitId}")
+    return unitId
 }
 
 android {
@@ -32,8 +34,6 @@ android {
         }
     }
 
-    println(getAdsUnitId("ads_opening_unit_id", "debug"))
-    println(getAdsUnitId("ads_opening_unit_id", "release"))
     compileSdkVersion config.compile_sdk
     defaultConfig {
         applicationId config.app_id
@@ -51,7 +51,7 @@ android {
             resValue("string", "ads_app_id", "ca-app-pub-3940256099942544~3347511713")
             resValue("string", "ads_banner_unit_id", "ca-app-pub-3940256099942544/6300978111")
             resValue("string", "ads_interstitial_id", "ca-app-pub-3940256099942544/1033173712")
-            buildConfigField("String", "ADS_OPENING_UNIT_ID", configProperties["admob_opening_unit_id"].toString())
+            buildConfigField("String", "ADS_OPENING_UNIT_ID", getAdsUnitId("ads_opening_unit_id", "debug"))
         }
         release {
 
@@ -67,14 +67,7 @@ android {
             resValue("string", "ads_app_id", "ca-app-pub-8679189423397017~8521853317")
             resValue("string", "ads_banner_unit_id", "ca-app-pub-8679189423397017/1841551438")
             resValue("string", "ads_interstitial_id", "ca-app-pub-8679189423397017/9803145397")
-            android.applicationVariants.all { variant ->
-                variant.outputs.all {
-                    def formattedDate = new Date().format('yyyyMMddHHmmss')
-                    def appName = variant.getApplicationId().split(/[.]/)[3]
-                    outputFileName =
-                            "${appName}-${variant.name}-${variant.versionCode}-${variant.versionName}-${formattedDate}.apk"
-                }
-            }
+            buildConfigField("String", "ADS_OPENING_UNIT_ID", getAdsUnitId("ads_opening_unit_id", "release"))
         }
 
     }
